# USB-Password-Manager

./: .gitignore  .gitmodules  CMakeLists.txt  Comp&Run.sh  LICENSE  README.md  main
ExtChrome/: background.js  content_script.js  manifest.json  popup.html  popup.js
ExtChrome/app/: GUI  something.txt
PW-Ext/: manifest.json  popup.html
PW-Ext/src/: overlay.js  popup.css  popup.js
PW-Ext/src/background/: background.js
PW-Ext/src/content_script/: content_script.js
PW-Ext/src/newEntry/: newEntry.html  newEntry.js
db/: test.txt
src/: FileManager.h  main.cpp
src/core/: CefThread.cpp  CefThread.h  DatabaseManager.cpp  DatabaseManager.h  EncryptionUtil.cpp  EncryptionUtil.h  Logger.cpp  Logger.h  MessageWorker.cpp  MessageWorker.h  WebSocket.cpp  WebSocket.h  settings.cpp  settings.h  simpleApp.cpp  simpleApp.h  simpleHandler.cpp  simpleHandler.h
src/gui/: index.html  main.js  package.json
src/gui/GUI/: CMakeLists.txt  addnewwindow.cpp  addnewwindow.h  addnewwindow.ui  inputdialog.cpp  inputdialog.h  inputdialog.ui  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  setup.cpp  setup.h  setup.ui
tests/core_tests/CefThreadTests/: CefThreadTestbench.cpp  cefclient_gtk.cc
